Manufacturer-CRUD funkční, validace-funkční

--- a/AutopartsWeb/Areas/SuperAdmin/Views/Brand/BrandEdit.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Brand/BrandEdit.cshtml
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-floating">
                     <input asp-for="Title" type="text" class="form-control" id="Title" placeholder="Název brandu">
-                    <label asp-for="Title">Názeb brandu</label>
+                    <label asp-for="Title">Název brandu</label>
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
             </div>
