Vytvoření Entit, VM, Mapperů - Engine,Model,Oe,OeNumberGroup,ParentPkwEngine,Pkw,TechnicalData

--- a/AutopartsWeb/Areas/SuperAdmin/Views/Brand/BrandCreate.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Brand/BrandCreate.cshtml
@@ -34,9 +34,9 @@
                     <small id="TitleCount50" class="form-text">0/50</small>
                 </div>
                 <div class="form-floating">
-                    <input asp-for="Title" type="text" class="form-control" id="Title" placeholder="Název brandu">
-                    <label asp-for="Title">Název brandu</label>
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <input asp-for="BrandName" type="text" class="form-control" id="Title" placeholder="Název brandu">
+                    <label asp-for="BrandName">Název brandu</label>
+                    <span asp-validation-for="BrandName" class="text-danger"></span>
                 </div>
             </div>
 
@@ -45,9 +45,9 @@
                     <small id="GeneralInformationCount2000" class="form-text">0/2000</small>
                 </div>
                 <div class="form-floating">
-                    <textarea asp-for="GeneralInformation" type="text" class="form-control" style="height: 300px" id="GeneralInformation" placeholder="Informace o brandu"></textarea>
-                    <label asp-for="GeneralInformation">Informace o brandu</label>
-                    <span asp-validation-for="GeneralInformation" class="text-danger"></span>
+                    <textarea asp-for="BrandDescription" type="text" class="form-control" style="height: 300px" id="GeneralInformation" placeholder="Informace o brandu"></textarea>
+                    <label asp-for="BrandDescription">Informace o brandu</label>
+                    <span asp-validation-for="BrandDescription" class="text-danger"></span>
                 </div>
             </div>
 
