--- a/AutopartsWeb/Areas/SuperAdmin/Views/Warranty/WarrantyCreate.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Warranty/WarrantyCreate.cshtml
@@ -24,9 +24,9 @@
                     <small id="TitleCount50" class="form-text">0/50</small>
                 </div>
                 <div class="form-floating">
-                    <input asp-for="Title" type="text" class="form-control" id="Title" name="Title" placeholder="Název záruční lhůty">
-                    <label asp-for="Title">Název záruční lhůty</label>
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <input asp-for="WarrantyPeriod" type="text" class="form-control" id="Title" name="Title" placeholder="Název záruční lhůty">
+                    <label asp-for="WarrantyPeriod">Název záruční lhůty</label>
+                    <span asp-validation-for="WarrantyPeriod" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-12">
