--- a/AutopartsWeb/Areas/SuperAdmin/Views/Manufacturer/ManufacturerEdit.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Manufacturer/ManufacturerEdit.cshtml
@@ -37,9 +37,9 @@
                     <small id="TitleCount50" class="form-text">0/50</small>
                 </div>
                 <div class="form-floating">
-                    <input asp-for="Title" type="text" class="form-control" id="Title" placeholder="Název výrobce">
-                    <label asp-for="Title">Název výrobce</label>
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <input asp-for="ManufacturerName" type="text" class="form-control" id="Title" placeholder="Název výrobce">
+                    <label asp-for="ManufacturerName">Název výrobce</label>
+                    <span asp-validation-for="ManufacturerName" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-12">
@@ -47,9 +47,9 @@
                     <small id="DescriptionCount2000" class="form-text">0/2000</small>
                 </div>
                 <div class="form-floating">
-                    <textarea asp-for="Description" type="text" class="form-control" style="height: 300px" id="Description" placeholder="Informace o výrobci"></textarea>
-                    <label asp-for="Description">Informace o brandu</label>
-                    <span asp-validation-for="Description" class="text-danger"></span>
+                    <textarea asp-for="ManufacturerDescription" type="text" class="form-control" style="height: 300px" id="Description" placeholder="Informace o výrobci"></textarea>
+                    <label asp-for="ManufacturerDescription">Informace o brandu</label>
+                    <span asp-validation-for="ManufacturerDescription" class="text-danger"></span>
                 </div>
             </div>
 
