Model-validace,CRUD,controller

--- a/AutopartsWeb/Areas/SuperAdmin/Views/Shared/_Layout.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Shared/_Layout.cshtml
@@ -149,9 +149,45 @@
                         </a>
                     </li>
                     <li>
+                        <a asp-area="SuperAdmin" asp-controller="" asp-action="">
+                            <i class="bi bi-circle"></i>
+                            <span>Kódy motorů</span>
+                        </a>
+                    </li>
+                    <li>
                         <a asp-area="SuperAdmin" asp-controller="Currency" asp-action="CurrencyList">
                             <i class="bi bi-circle"></i>
-                            <span>Měna</span>
+                            <span>Měny</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-area="SuperAdmin" asp-controller="Model" asp-action="ModelList">
+                            <i class="bi bi-circle"></i>
+                            <span>Modely vozidel</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-area="SuperAdmin" asp-controller="" asp-action="">
+                            <i class="bi bi-circle"></i>
+                            <span>OE čísla</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-area="SuperAdmin" asp-controller="" asp-action="">
+                            <i class="bi bi-circle"></i>
+                            <span>Skupiny OE čísel</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-area="SuperAdmin" asp-controller="" asp-action="">
+                            <i class="bi bi-circle"></i>
+                            <span>Osobní vozidla</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-area="SuperAdmin" asp-controller="" asp-action="">
+                            <i class="bi bi-circle"></i>
+                            <span>Technická data vozidel</span>
                         </a>
                     </li>
                     <li>
