--- a/AutopartsWeb/Areas/SuperAdmin/Views/_ViewImports.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/_ViewImports.cshtml
@@ -2,7 +2,8 @@
 @using AutopartsEntity.Catalog.ViewModels.BrandViewModel;
 @using AutopartsEntity.Catalog.ViewModels.CountryViewModel;
 @using AutopartsEntity.Catalog.ViewModels.CurrencyViewModel;
-@using AutopartsEntity.Catalog.ViewModels.ManufacturerViewmodel;
+@using AutopartsEntity.Catalog.ViewModels.ManufacturerViewModel;
+@using AutopartsEntity.Catalog.ViewModels.ModelViewModel;
 @using AutopartsEntity.Catalog.ViewModels.WarrantyViewModel;
 
 @* Import VM - ExtensionForUsers *@
